Create parameter list controller
